Fixed issues causing overlap on phones

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -362,7 +362,8 @@ h1 {
 
 @media (orientation: portrait) {
   .gridContainer {
-    grid-template: calc(100vh*2/5) calc(100vh*3/5) / 100vw;
+    min-height: 100vh;
+    grid-template: 50vh auto / 100vw;
   }
   #header {
     background-color: transparent;
